feat(LottoStorage): 로또 당첨 내역 및 수익률 출력 구현